[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Jabberjay"
version = "0.0.8.post2"
description = "🦜 Synthetic Voice Detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Matthew Boakes", email = "Matthew.Boakes@Gmail.com" },
]
keywords = [
    "synthetic voice detection",
    "deepfake detection",
    "anti-spoofing",
    "audio classification",
    "speech",
    "ASVspoof",
    "bonafide",
    "spoof",
    "transformers",
    "ViT",
    "HuBERT",
    "Wav2Vec2",
    "WavLM",
    "RawNet2",
    "machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Security",
]
dependencies = [
    "huggingface-hub>=1.9.0",
    "joblib>=1.5.0",
    "loguru>=0.7.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pillow>=10.0",
    "PyYAML>=6.0.0",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.5.0",
]

[project.urls]
"Homepage" = "https://github.com/MattyB95/Jabberjay"
"Bug Tracker" = "https://github.com/MattyB95/Jabberjay/issues"
"Changelog" = "https://github.com/MattyB95/Jabberjay/blob/main/CHANGELOG.md"
"Source" = "https://github.com/MattyB95/Jabberjay"

[project.scripts]
jabberjay = "Jabberjay.jabberjay:main"

[dependency-groups]
dev = [
    "black>=26.3.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/Jabberjay --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/Jabberjay"]
omit = [
    "*/__pycache__/*",
    "*/Models/RawNet2/model.py",  # third-party neural network architecture
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E4/E7/E9 and F are safe alongside black; I adds isort; avoid E1-E3/W which overlap with black
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.environment]
python-version = "3.14"

[tool.hatch.build.targets.wheel]
packages = ["src/Jabberjay"]
